# jenkins-python-test

./: Dockerfile  Jenkinsfile  Jenkinsfile_new  artifactory-spec.json  conftest.py  entrypoint.sh  local-storage.json  requirements.txt  setup.cfg  setup.py
irisvmpy/: iris.py
package_xxx/: module_xxx.py
requirements/: dev.txt  prod.txt
tests/: test_module_xxx.py
