# Example ---> https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
# How-To add configs for PyTest, Coverade, PyLint etc --> http://renesd.blogspot.com/2017/02/setupcfg-solution-to-python-config-file.html
[metadata]
#name = name
#version = 0.0.1
description = desc
long_description = file: README.md
long_description_content_type = text/markdown
#url = url
#author = author
license_file=LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
#include_package_data = true
#packages = find:
setup_requires =
    wheel
#install_requires =
#    packages
#    packages
#    packages

[bdist_wheel]
universal=1